syntax = "proto3";

package category.v1;

service CategoryService {
  rpc ListCategory(ListCategoryRequest) returns (ListCategoryResponse) {} 
}

message ListCategoryRequest {
}

message ListCategoryResponse {
    repeated Category categories = 1;
}

message Category {
    int32 id = 1;
    string name = 2;
    string description = 3;
    int32 parent_id = 4;
}