syntax = "proto3";

package video.v1;

import "google/protobuf/timestamp.proto";
import "proto/user/v1/user.proto";

service VideoService {
  rpc ListVideo(ListVideoRequest) returns (ListVideoResponse) {}
  rpc ChangeVideoStatus(ChangeVideoStatusRequest) returns (ChangeVideoStatusResponse) {}
  rpc ChangeVideoEditor(ChangeVideoEditorRequest) returns (ChangeVideoEditorResponse) {}
}

message ListVideoRequest {
}

message ListVideoResponse {
  repeated Video videos = 1;
}

message ChangeVideoStatusRequest {
  repeated int32 ids = 1;
  VideoStatus status = 2;
}

message ChangeVideoStatusResponse {
}

message ChangeVideoEditorRequest {
  int32 id = 1;
  int32 editor_id = 2;
}

message ChangeVideoEditorResponse {
}

message Video {
  int32 id = 1;
  string name = 2;
  string youtube_id = 5;
  string description = 3;
  google.protobuf.Timestamp created_at = 4;
  VideoStatus status = 6;
  user.v1.User editor = 7;
}

enum VideoStatus {
  Pending = 0;
  Archived = 1;
  Approved = 2;
  InProgress = 3;
  InReview = 4;
}